--- a/Milestone06/Makefile
+++ b/Milestone06/Makefile
@@ -1,16 +1,5 @@
-GCC=/usr/bin/gcc
-
-simplefs: shell.o fs.o disk.o
-	$(GCC) shell.o fs.o disk.o -o simplefs
-
-shell.o: shell.c
-	$(GCC) -Wall shell.c -c -o shell.o -g
-
-fs.o: fs.c fs.h
-	$(GCC) -Wall fs.c -c -o fs.o -g
-
-disk.o: disk.c disk.h
-	$(GCC) -Wall disk.c -c -o disk.o -g
+simplefs: shell.c fs.c fs.h disk.c
+	gcc fs.c shell.c disk.c -Wall -o simplefs
 
 clean:
-	rm simplefs disk.o fs.o shell.o
+	rm -f simplefs 
